--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
-    "extends": ["standard", "plugin:prettier/recommended"],
+    "extends": [
+        "standard",
+        "plugin:prettier/recommended",
+        "plugin:react/recommended"
+    ],
     "rules": {
         "semi": [2, "always"],
         "no-extra-semi": 2,
